apps/technitium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium
  namespace: dns
spec:
  ingressClassName: nginx
  rules:
  - host: technitium.wcrpc.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: technitium-web
            port:
              number: 80
  tls:
  - hosts:
    - technitium.wcrpc.lan
    secretName: wcrpc-tls
